--- a/ChaiZhuang/ChaiZhuang.vcxproj.filters
+++ b/ChaiZhuang/ChaiZhuang.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="PropertiesWnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CPicture.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CPictureShow.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChaiZhuang.cpp">
@@ -84,6 +90,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PropertiesWnd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CPicture.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CPictureShow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
