--- a/ChaiZhuang/ChaiZhuang.vcxproj.filters
+++ b/ChaiZhuang/ChaiZhuang.vcxproj.filters
@@ -57,7 +57,7 @@
     <ClInclude Include="CPicture.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="CPictureShow.h">
+    <ClInclude Include="CMyPropertiesWnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -95,7 +95,7 @@
     <ClCompile Include="CPicture.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CPictureShow.cpp">
+    <ClCompile Include="CMyPropertiesWnd.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
